--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "name": "mstest",
+  "name": "apinode-goapps",
   "version": "1.0.0",
-  "description": "Microservicio appnam",
+  "description": "Curso básico de node con typescripts de api",
   "main": "server.js",
   "scripts": {
-    "build": "tsc",
-    "dev-ts": "tsc -w",
-    "dev": "nodemon ./build/server.js",
-    "start": "tsc && node ./build/server.js"
+    "dev:ts": "tsc -w",
+    "dev:js": "nodemon ./build/server.js",
+    "dev": "concurrently npm:dev:*",
+    "start:ts": "tsc -w",
+    "start:js": "node ./build/server.js",
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "email": "jeisoncaguana@gmail.com",
+    "name": "Go Apps",
+    "url": "http://goapps.ec/"
+  },
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
-    "@types/helmet": "^4.0.0",
     "@types/node": "^16.9.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "helmet": "^5.0.2",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mssql": "^7.2.1",
     "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
     "telegraf": "^4.4.2",
